added 'skip to main content' link

--- a/page_2.html
+++ b/page_2.html
@@ -13,7 +13,7 @@
     -->
     <header>
         <!-- Skip to Main "invisible" feature -->
-        <a href = "">Skip to Main Content</a>
+        <a href = "#main-content">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
@@ -29,7 +29,7 @@
     </header>
 
     <!-- Main -->
-    <main>
+    <main id="main-content">
         <section id="life-outside-classroom">
             <h2>Life Outside the Classroom</h2>
             <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
