--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     -->
     <header>
         <!-- Skip to Main "invisible" feature -->
-        <a href = "">Skip to Main Content</a>
+        <a href = "#main-content">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
@@ -25,7 +25,7 @@
         <h1>Student Success Portal</h1>
 
     </header>
-    <main>
+    <main id="main-content">
         <section>
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
