--- a/page_1.html
+++ b/page_1.html
@@ -13,7 +13,7 @@
     -->
     <header>
         <!-- Skip to Main "invisible" feature -->
-        <a href = "">Skip to Main Content</a>
+        <a href = "#main-content">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
@@ -27,7 +27,7 @@
     </header>
 
     <!-- Main -->
-    <main>
+    <main id="main-content">
         <div>
             <p>At the University of Michigan School of Information (UMSI), we are committed to supporting our students' academic success by offering a wide array of resources and services. Our academic advising team provides personalized guidance to help you navigate your curriculum, select courses, and address any academic challenges or questions you may encounter during your studies. UMSI students also have access to the extensive collections and study spaces within the University Library system, offering both digital and physical resources essential for research and coursework. Additionally, our specialized tutoring services and the UMSI Writing Center are available to support you in mastering complex subjects and enhancing your written communication skills. By utilizing these academic resources, UMSI students can thrive in their studies and achieve their educational goals. </p>
 
