--- a/page_3.html
+++ b/page_3.html
@@ -13,7 +13,7 @@
     -->
     <header>
         <!-- Skip to Main "invisible" feature -->
-        <a href = "">Skip to Main Content</a>
+        <a href = "#main-content">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
@@ -27,7 +27,7 @@
     </header>
 
     <!-- Main -->
-    <main>
+    <main id="main-content">
         <section>
             <h2>Physical Health</h2>
             <p>Keeping your body healthy is essential for success. The University of Michigan offers numerous resources to help you stay in top physical condition:</p>
