adding content to pages

--- a/page_1.html
+++ b/page_1.html
@@ -40,19 +40,19 @@
                 <h3>Advising Team</h3>
 
                 <div>
-                    <img src="" alt="Headshot of UMSI Advisor 1, Name">
+                    <img src="images/headshot-filler.png" alt="Headshot of UMSI Advisor 1, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
                 </div>
 
                 <div>
-                    <img src="" alt="Headshot of UMSI Advisor 2, Name">
+                    <img src="images/headshot-filler.png" alt="Headshot of UMSI Advisor 2, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
                 </div>
 
                 <div>
-                    <img src="" alt="Headshot of UMSI Advisor 3, Name">
+                    <img src="images/headshot-filler.png" alt="Headshot of UMSI Advisor 3, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
                 </div>
@@ -62,8 +62,8 @@
             <article>
                 <h3>Types of Advising Appointments</h3>
                 <ul>
-                    <li>Scheduled 1:1 Appointments</li>
-                    <li>Drop-in 1:1 Appointments</li>
+                    <li><a href="https://www.google.com/url?q=https%3A%2F%2Fsi-umich.navigate.eab.com&sa=D&sntz=1&usg=AOvVaw2hrgCEntX9a472rfp4p9kR">Scheduled 1:1 Appointments</a></li>
+                    <li><a href="https://www.google.com/url?q=https%3A%2F%2Fofficehours.it.umich.edu%2Fqueue%2F1001&sa=D&sntz=1&usg=AOvVaw3elZHqcKWT2i3m1Yy7q879">Drop-in 1:1 Appointments</a></li>
                 </ul>
             </article>
             
@@ -125,13 +125,13 @@
                 <h3>Academic Sucess Team</h3>
 
                 <div>
-                    <img src="" alt="Headshot of UMSI Tutor 1, Name">
+                    <img src="images/headshot-filler.png" alt="Headshot of UMSI Tutor 1, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
                 </div>
 
                 <div>
-                    <img src="" alt="Headshot of UMSI Tutor 2, Name">
+                    <img src="images/headshot-filler.png" alt="Headshot of UMSI Tutor 2, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
                 </div>
