--- a/page_2.html
+++ b/page_2.html
@@ -32,6 +32,7 @@
     <main id="main-content">
         <section>
             <h2>Life Outside the Classroom</h2>
+            <img src="images/UMSI_Festifall_09012022_05.jpg" alt="Group of students walking on campus" width="100%">
             <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
             <article>
 
