--- a/page_2.html
+++ b/page_2.html
@@ -49,6 +49,9 @@
 
         <section>
             <h2>Student Organizations</h2>
+            <p>Find all student organizations <a href="https://campusinvolvement.umich.edu/managing-your-student-organization">here!</a></p>
+
+            <p>Some highlights!</p>
 
             <article>
                 <h3>Cultural Groups</h3>
