added links and more content

--- a/page_3.html
+++ b/page_3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 3</title>
+    <title>Student Well-Being</title>
 </head>
 <body>
     <!-- 
@@ -13,31 +13,30 @@
     -->
     <header>
         <!-- Skip to Main "invisible" feature -->
-        <a href = "#main-content">Skip to Main Content</a>
+        <a href="#main-content">Skip to Main Content</a>
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li><a href = "page_2.html">Page 2</a> </li>
-                <li><a href = "page_3.html">Page 3</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page_1.html">Page 1</a></li>
+                <li><a href="page_2.html">Page 2</a></li>
+                <li><a href="page_3.html">Page 3</a></li>
             </ul>
         </nav>
         <h1>Student Well-Being</h1>
-
     </header>
 
     <!-- Main -->
     <main id="main-content">
         <section>
             <h2>Physical Health</h2>
-            <p>Keeping your body healthy is essential for success. The University of Michigan offers numerous resources to help you stay in top physical condition:</p>
+            <p>Maintaining your physical health is essential for academic success and overall well-being. The University of Michigan offers a variety of resources to support your physical health:</p>
             <article>
                 <h3>University Health Service (UHS)</h3>
                 <figure>
                     <img src="images/UHS.jpg" alt="University Health Services building">
                     <figcaption>University Health Services Building</figcaption>
                 </figure>
-                <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups, vaccinations, and specialist referrals.</p>
+                <p>UHS provides comprehensive medical care, including routine check-ups, vaccinations, specialist referrals, and health education. Learn more about the services they offer by visiting the <a href="https://www.uhs.umich.edu/">UHS website</a>.</p>
             </article>
             <article>
                 <h3>Recreational Sports</h3>
@@ -45,41 +44,50 @@
                     <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
                     <figcaption>UMSI out in the fall!</figcaption>
                 </figure>
-                <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and healthy.</p>
+                <p>Stay active through a variety of fitness programs, intramural sports, and access to gym facilities. Check out available activities and membership options on the <a href="https://recsports.umich.edu/">Recreational Sports website</a>.</p>
+            </article>
+            <article>
+                <h3>Nutrition Resources</h3>
+                <p>Find nutritional guidance and meal planning support through campus dietitians. Learn more about healthy eating habits at the <a href="https://www.uhs.umich.edu/nutrition">Nutrition Services page</a>.</p>
             </article>
         </section>
-        
+
         <section>
             <h2>Mental Health</h2>
-            <p>Maintaining your mental well-being is crucial for thriving in graduate school. Here are resources to support your mental health:</p>
+            <p>Your mental well-being is crucial for thriving in graduate school. Explore these resources to support your mental health:</p>
             <article>
-                <h3>Counseling and Psychological Services (CAPS):</h3>
-                <p> Access individual counseling, group therapy, workshops, and crisis intervention services.</p>
+                <h3>Counseling and Psychological Services (CAPS)</h3>
+                <p>CAPS offers individual counseling, group therapy, workshops, and crisis intervention services. For more information or to schedule an appointment, visit the <a href="https://caps.umich.edu/">CAPS website</a>.</p>
             </article>
             <article>
-                <h3>Wellness Coaching:</h3>
+                <h3>Wellness Coaching</h3>
+                <p>Work with a wellness coach to develop strategies for managing stress, improving time management, and enhancing your overall well-being. Learn more about the program at the <a href="https://caps.umich.edu/wellness-coaching">Wellness Coaching page</a>.</p>
+            </article>
+            <article>
+                <h3>Mindfulness and Meditation</h3>
+                <p>Participate in mindfulness and meditation sessions to cultivate a calm and focused mind. Explore upcoming sessions and resources on the <a href="https://caps.umich.edu/mindfulness">Mindfulness Resources page</a>.</p>
+            </article>
+            <article>
+                <h3>Support Groups</h3>
+                <p>Join peer support groups to connect with others who share similar experiences and challenges. Explore the different groups available through the <a href="https://caps.umich.edu/support-groups">Support Groups page</a>.</p>
+            </article>
+        </section>
 
-                <p>Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.</p>
-            </article>
-            <article>
-                <h3>Mindfulness Resources:</h3>
-
-                <p> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</p>
-            </article>
-            <article>
-                <h3>Support Groups:</h3>
-
-                <p> Join peer support groups for shared experiences and collective coping strategies.</p>
-            </article>
+        <section>
+            <h2>Additional Resources</h2>
+            <p>Explore other well-being resources available at UM:</p>
+            <ul>
+                <li><a href="https://wellbeing.studentlife.umich.edu/">Student Life Well-Being</a> - A hub for all things well-being, including resources on financial wellness, sleep, and community connections.</li>
+                <li><a href="https://www.michiganross.umich.edu/student-experience/life-in-ann-arbor">Life in Ann Arbor</a> - Discover the vibrant community of Ann Arbor and find ways to balance life outside of your academic responsibilities.</li>
+                <li><a href="https://services.uhs.umich.edu/">Emergency Services</a> - Immediate help for urgent mental and physical health needs.</li>
+            </ul>
         </section>
     </main>
 
-
     <!-- Footer -->
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising</a></p>
     </footer>
-    
-</body>
 
+</body>
 </html>
