--- a/index.html
+++ b/index.html
@@ -31,12 +31,57 @@
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
             <p>This guide is set up to help you be successul inside and outside of the classroom and we have included the following resources throughout our site:</p>
             <ol>
-                <li>Academic Resources</li>
-                <li>Physical Health</li>
-                <li>Mental Health</li>
-                <li>Life Outside Classroom</li>
-                <li>Contact</li>
+                <li><strong>Academic Resources:</strong> Access study guides, tutoring services, library resources, and tips on time management to excel in your coursework.</li>
+                <li><strong>Physical Health:</strong> Find information on gym memberships, fitness classes, and nutritional advice to maintain your physical well-being.</li>
+                <li><strong>Mental Health:</strong> Explore counseling services, stress management workshops, and mindfulness exercises to support your mental health.</li>
+                <li><strong>Life Outside the Classroom:</strong> Discover clubs, social events, and networking opportunities that enhance your graduate experience.</li>
+                <li><strong>Contact:</strong> Reach out to our support team for personalized guidance or to answer any questions you might have.</li>
             </ol>
+        </section>
+
+        <section>
+            <h2>Upcoming Events</h2>
+            <ul>
+                <li><strong>September 15:</strong> Graduate Orientation - Meet your peers and learn about campus resources.</li>
+                <li><strong>September 22:</strong> Time Management Workshop - Tips and tricks for balancing your studies and personal life.</li>
+                <li><strong>October 5:</strong> Wellness Fair - Explore resources for maintaining your mental and physical health.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Career Development</h2>
+            <p>Prepare for your career post-graduation with resources from our Career Development Center. We offer resume reviews, interview preparation, and connections with industry professionals.</p>
+            <ul>
+                <li><strong>Job Boards:</strong> Access exclusive job listings for graduate students.</li>
+                <li><strong>Workshops:</strong> Attend workshops on resume building, networking, and job search strategies.</li>
+                <li><strong>Mentorship:</strong> Connect with alumni mentors who can provide guidance and support in your field.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Financial Aid and Scholarships</h2>
+            <p>Explore various funding options available to support your graduate studies. Our financial aid office provides resources on scholarships, grants, and loans tailored for graduate students.</p>
+            <ul>
+                <li><strong>Scholarship Opportunities:</strong> Discover scholarships specific to your program or background.</li>
+                <li><strong>Grant Writing Assistance:</strong> Get help with writing grant proposals to fund your research projects.</li>
+                <li><strong>Budgeting Tips:</strong> Learn how to manage your finances effectively during your studies.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Research and Innovation</h2>
+            <p>Engage in groundbreaking research and innovation at UM. Explore opportunities to collaborate with faculty, participate in research projects, and present your work at conferences.</p>
+            <ul>
+                <li><strong>Research Grants:</strong> Apply for funding to support your research endeavors.</li>
+                <li><strong>Lab Resources:</strong> Access state-of-the-art labs and equipment for your projects.</li>
+                <li><strong>Innovation Hub:</strong> Connect with the UM Innovation Hub to explore startup resources and entrepreneurial initiatives.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>International Student Support</h2>
+            <p>If you are an international student, find support services tailored to your needs. We offer visa guidance, cultural integration programs, and language support.</p>
+            <ul>
+                <li><strong>Visa Assistance:</strong> Get help with maintaining your student visa status and understanding work regulations.</li>
+                <li><strong>Cultural Integration:</strong> Participate in programs designed to help you adjust to life in the U.S. and connect with other international students.</li>
+                <li><strong>Language Resources:</strong> Access language support services including tutoring and conversation groups.</li>
+            </ul>
         </section>
         
     </main>
