--- a/index.html
+++ b/index.html
@@ -14,19 +14,27 @@
      You must include a Skip to Main content link on every page. 
     -->
     <header>
-        <!-- Skip to Main "invisible" feature -->
-        <a href = "#main-content">Skip to Main Content</a>
         <nav>
+            <div class="skip"><a href="#main-content">Skip to Main Content</a></div>
+            <div class="Topnav">
+                <img src="images/umich-logo.png" alt="University of Michigan Logo">
+                
+                <form id="search-input" action="#" method="get" class="search-bar">
+                    <input type="text" name="search" placeholder="Search the portal..." aria-label="Search the Student Success Portal">
+                    <button type="submit"><img src="images/search-icon.png" alt="Search"></button>
+                </form>
+            
+            </div>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li><a href = "page_2.html">Page 2</a> </li>
-                <li><a href = "page_3.html">Page 3</a></li>
+                <li><a href = "page_1.html">Academic Support</a></li>
+                <li><a href = "page_2.html">Student Life</a> </li>
+                <li><a href = "page_3.html">Student Well-Being</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
-
     </header>
+
     <main id="main-content">
         <section>
             <h2>Welcome to the UM Grad Success Navigator</h2>
@@ -89,6 +97,6 @@
     </main>
     <footer>
         <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
-        </footer>
+    </footer>
 </body>
 </html>
