--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             </div>
             <ul>
-                <li><a href = "index.html">Home</a></li>
+                <li><a class="active" href = "index.html">Home</a></li>
                 <li><a href = "page_1.html">Academic Support</a></li>
                 <li><a href = "page_2.html">Student Life</a> </li>
                 <li><a href = "page_3.html">Student Well-Being</a></li>
