--- a/page_2.html
+++ b/page_2.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "page_1.html">Academic Support</a></li>
-                <li><a href = "page_2.html">Student Life</a> </li>
+                <li><a class="active" href = "page_2.html">Student Life</a> </li>
                 <li><a href = "page_3.html">Student Well-Being</a></li>
             </ul>
         </nav>
