--- a/page_3.html
+++ b/page_3.html
@@ -31,7 +31,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "page_1.html">Academic Support</a></li>
                 <li><a href = "page_2.html">Student Life</a> </li>
-                <li><a href = "page_3.html">Student Well-Being</a></li>
+                <li><a class="active" href = "page_3.html">Student Well-Being</a></li>
             </ul>
         </nav>
         <h1>Student Well-Being</h1>
