finished second page + changed html filenames

--- a/home.html
+++ b/home.html
@@ -26,10 +26,10 @@
             
             </div>
             <ul>
-                <li><a class="active" href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Academic Support</a></li>
-                <li><a href = "page_2.html">Student Life</a> </li>
-                <li><a href = "page_3.html">Student Well-Being</a></li>
+                <li><a class="active" href = "home.html">Home</a></li>
+                <li><a href = "academic_support.html">Academic Support</a></li>
+                <li><a href = "student_life.html">Student Life</a> </li>
+                <li><a href = "student_wellbeing.html">Student Well-Being</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
@@ -57,6 +57,7 @@
                 <li><strong>October 5:</strong> Wellness Fair - Explore resources for maintaining your mental and physical health.</li>
             </ul>
         </section>
+        
         <section>
             <h2>Career Development</h2>
             <p>Prepare for your career post-graduation with resources from our Career Development Center. We offer resume reviews, interview preparation, and connections with industry professionals.</p>
@@ -66,6 +67,7 @@
                 <li><strong>Mentorship:</strong> Connect with alumni mentors who can provide guidance and support in your field.</li>
             </ul>
         </section>
+
         <section>
             <h2>Financial Aid and Scholarships</h2>
             <p>Explore various funding options available to support your graduate studies. Our financial aid office provides resources on scholarships, grants, and loans tailored for graduate students.</p>
@@ -75,6 +77,7 @@
                 <li><strong>Budgeting Tips:</strong> Learn how to manage your finances effectively during your studies.</li>
             </ul>
         </section>
+
         <section>
             <h2>Research and Innovation</h2>
             <p>Engage in groundbreaking research and innovation at UM. Explore opportunities to collaborate with faculty, participate in research projects, and present your work at conferences.</p>
@@ -84,6 +87,7 @@
                 <li><strong>Innovation Hub:</strong> Connect with the UM Innovation Hub to explore startup resources and entrepreneurial initiatives.</li>
             </ul>
         </section>
+
         <section>
             <h2>International Student Support</h2>
             <p>If you are an international student, find support services tailored to your needs. We offer visa guidance, cultural integration programs, and language support.</p>
