--- a/student_wellbeing.html
+++ b/student_wellbeing.html
@@ -28,10 +28,10 @@
             
             </div>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Academic Support</a></li>
-                <li><a href = "page_2.html">Student Life</a> </li>
-                <li><a class="active" href = "page_3.html">Student Well-Being</a></li>
+                <li><a href = "home.html">Home</a></li>
+                <li><a href = "academic_support.html">Academic Support</a></li>
+                <li><a href = "student_life.html">Student Life</a> </li>
+                <li><a class="active" href = "student_wellbeing.html">Student Well-Being</a></li>
             </ul>
         </nav>
         <h1>Student Well-Being</h1>
