completed mobile view
I just defined a few classes and reused them across the entire site

--- a/academic_support.html
+++ b/academic_support.html
@@ -48,20 +48,20 @@
             
 
             <h3>Advising Team</h3>
-            <article class="profiles">
-                <div class="p1">
+            <article class="sixgrid">
+                <div class="c1">
                     <img src="images/headshot-filler.png" alt="Headshot of UMSI Advisor 1, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
                 </div>
 
-                <div class="p2">
+                <div class="c2">
                     <img src="images/headshot-filler.png" alt="Headshot of UMSI Advisor 2, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
                 </div>
 
-                <div class="p3">
+                <div class="c3">
                     <img src="images/headshot-filler.png" alt="Headshot of UMSI Advisor 3, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
@@ -94,7 +94,7 @@
                 
                 <div>
                     <h3>UX Research and Design</h3>
-                    <img src="/images/UXIcon.jpg" alt="">
+                    <img src="images/UXIcon.jpg" alt="">
                     <ul class="columnBtns">
                         <li>Degree Requirments</li>
                         <li>Course Planning Sheet</li>
@@ -136,14 +136,14 @@
 
 
             <h3>Academic Sucess Team</h3>
-            <article class="profiles">
-                <div class="p4">
+            <article class="sixgrid">
+                <div class="c4">
                     <img src="images/headshot-filler.png" alt="Headshot of UMSI Tutor 1, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
                 </div>
 
-                <div class="p5">
+                <div class="c5">
                     <img src="images/headshot-filler.png" alt="Headshot of UMSI Tutor 2, Name">
                     <p>Name</p>
                     <p>[Introduction]</p>
