--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p>This website is set up to help you be successul inside and outside of the classroom and we have included the following resources throughout our site:</p>
             
-            <article class="sixgrid resources">
+            <article class="sixgrid altresources">
                 <div class="c4" tabindex="0">
                     <h3>Academic Resources:</h3>
                     <p>Access study guides, tutoring services, library resources, and tips on time management to excel in your coursework.</p>
