--- a/home.html
+++ b/home.html
@@ -40,28 +40,30 @@
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p>This website is set up to help you be successul inside and outside of the classroom and we have included the following resources throughout our site:</p>
             
-            <article class="sixgrid altresources">
-                <div class="c4" tabindex="0">
-                    <h3>Academic Resources:</h3>
-                    <p>Access study guides, tutoring services, library resources, and tips on time management to excel in your coursework.</p>
-                </div>
-                <div class="c5" tabindex="0">
-                    <h3>Physical Health:</h3> 
-                    <p>Find information on gym memberships, fitness classes, and nutritional advice to maintain your physical well-being.</p>
-                </div>
-                <div class="c4" tabindex="0">
-                    <h3>Mental Health:</h3> 
-                    <p>Explore counseling services, stress management workshops, and mindfulness exercises to support your mental health.</p>
-                </div>
-                <div class="c5" tabindex="0">
-                    <h3>Life Outside the Classroom:</h3> 
-                    <p>Discover clubs, social events, and networking opportunities that enhance your graduate experience.</p>
-                </div>
-                <div class="c6" tabindex="0">
-                    <h3>Contact:</h3> 
-                    <p>Reach out to our support team for personalized guidance or to answer any questions you might have.</p>
-                </div>
-            </article>
+            <div class="altresources">
+                <article class="sixgrid resources">
+                    <div  class="c4 altresources" tabindex="0">
+                        <h3>Academic Resources:</h3>
+                        <p>Access study guides, tutoring services, library resources, and tips on time management to excel in your coursework.</p>
+                    </div>
+                    <div class="c5 altresources" tabindex="0">
+                        <h3>Physical Health:</h3> 
+                        <p>Find information on gym memberships, fitness classes, and nutritional advice to maintain your physical well-being.</p>
+                    </div>
+                    <div class="c4 altresources" tabindex="0">
+                        <h3>Mental Health:</h3> 
+                        <p>Explore counseling services, stress management workshops, and mindfulness exercises to support your mental health.</p>
+                    </div>
+                    <div class="c5 altresources" tabindex="0">
+                        <h3>Life Outside the Classroom:</h3> 
+                        <p>Discover clubs, social events, and networking opportunities that enhance your graduate experience.</p>
+                    </div>
+                    <div class="c6 altresources" tabindex="0">
+                        <h3>Contact:</h3> 
+                        <p>Reach out to our support team for personalized guidance or to answer any questions you might have.</p>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <section class="sectionBlock">
