--- a/student_life.html
+++ b/student_life.html
@@ -35,18 +35,18 @@
             </ul>
         </nav>
         <h1>Student Life at the University of Michigan</h1>
-    </header>
-
-    <!-- Main -->
-    <main id="main-content">
-        <section class="altsection">
-            <h2>Life Outside the Classroom</h2>
+        <article class="altsection"></section>
             <figure>
                 <img src="images/UMSI_Festifall_09012022_05.jpg" alt="Group of students walking on campus" width="100%">
                 <figcaption>UMSI out in the fall!</figcaption>
             </figure>
             <p>Graduate school is not just about academics; it's about building a balanced life and making the most of your time at UM. Here are some ways to engage and thrive outside the classroom:</p>
-        </section>
+        </article>
+    </header>
+
+    <!-- Main -->
+    <main id="main-content">
+        
 
         <section class="sectionBlock">
             <h2>Student Organizations</h2>
