--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         <section class="sectionBlock">
             <h2>Upcoming Events</h2>
             <div class="calendar-container">
-                <article class="calendar">
+                <article class="calendar" aria-label="Calendar">
                     <!-- Days of the week -->
                     <div class="day">Sun</div>
                     <div class="day">Mon</div>
