--- a/student_life.html
+++ b/student_life.html
@@ -35,9 +35,9 @@
             </ul>
         </nav>
         <h1>Student Life at the University of Michigan</h1>
-        <article class="altsection"></section>
+        <article class="altsection" aria-label="Picture and Caption">
             <figure>
-                <img src="images/UMSI_Festifall_09012022_05.jpg" alt="Group of students walking on campus" width="100%">
+                <img src="images/UMSI_Festifall_09012022_05.jpg" alt="Group of students walking on campus">
                 <figcaption>UMSI out in the fall!</figcaption>
             </figure>
             <p>Graduate school is not just about academics; it's about building a balanced life and making the most of your time at UM. Here are some ways to engage and thrive outside the classroom:</p>
