--- a/home.html
+++ b/home.html
@@ -45,27 +45,27 @@
                 <article class="sixgrid resources">
                     <div  class="c4 altresources" tabindex="0">
                         <h3>Academic Resources:</h3>
-                        <img src="/images/headshot-filler.png" alt="">
+                        <img src="images/headshot-filler.png" alt="">
                         <p>Access study guides, tutoring services, library resources, and tips on time management to excel in your coursework.</p>
                     </div>
                     <div class="c5 altresources" tabindex="0">
                         <h3>Physical Health:</h3> 
-                        <img src="/images/headshot-filler.png" alt="">
+                        <img src="images/headshot-filler.png" alt="">
                         <p>Find information on gym memberships, fitness classes, and nutritional advice to maintain your physical well-being.</p>
                     </div>
                     <div class="c4 altresources" tabindex="0">
                         <h3>Mental Health:</h3> 
-                        <img src="/images/headshot-filler.png" alt="">
+                        <img src="images/headshot-filler.png" alt="">
                         <p>Explore counseling services, stress management workshops, and mindfulness exercises to support your mental health.</p>
                     </div>
                     <div class="c5 altresources" tabindex="0">
                         <h3>Life Outside the Classroom:</h3> 
-                        <img src="/images/headshot-filler.png" alt="">
+                        <img src="images/headshot-filler.png" alt="">
                         <p>Discover clubs, social events, and networking opportunities that enhance your graduate experience.</p>
                     </div>
                     <div class="c6 altresources" tabindex="0">
                         <h3>Contact:</h3> 
-                        <img src="/images/headshot-filler.png" alt="">
+                        <img src="images/headshot-filler.png" alt="">
                         <p>Reach out to our support team for personalized guidance or to answer any questions you might have.</p>
                     </div>
                 </article>
