--- a/student_life.html
+++ b/student_life.html
@@ -155,9 +155,13 @@
 
 
     <!-- Footer -->
-    <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a> | <span id="year"></span></p>
-    </footer>
+    <ul class="contact">
+        <li>© <span id="year"></span> <a href="http://regents.umich.edu/"><span>The Regents of the University of Michigan</span></a></li>
+        <li></a> 500 S. State Street, Ann Arbor, MI 48109 USA</li>
+        <li><a href="/about/privacy/"><span><i class="fa fa-lock" aria-hidden="true"></i>Privacy Notice</span></a></li>
+        <li class="phone"><i class="fa fa-phone"><span class="hidden">Phone</span></i><a href="tel:+1-734-764-1817">+1 (734) 764-1817</a></li>
+        <li><a href="/contact/"><span><i class="fa fa-envelope" aria-hidden="true"></i>Contact us</span></a></li>
+    </ul>
 </body>
 
 
